--- a/src/Layout/dashboard.css
+++ b/src/Layout/dashboard.css
@@ -1,1 +1,10 @@
-.ant-card { margin-bottom: 30px; }
+
+.grad {
+    background-image: linear-gradient(to right,#67B26F , #4ca2cd);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    margin-top: 10px;
+  }
+  
